strong reference,soft,weak,phantom